--- a/teste.html
+++ b/teste.html
@@ -108,7 +108,7 @@
     </div>
     <footer class="footer">
         <div class="footer-content">
-            <div class="contact-section">
+            <div class="footer-contact-section">
                 <h2>Fale Conosco</h2>
                 <div class="social-icons">
                     <a href="https://facebook.com" target="_blank">
